src/plugins/snapshots/burrow__plugins__looking__actions__tests__it_looks_in_area_with_items_on_ground.snap
---
source: src/plugins/looking.rs
expression: reply.to_json()?
---
{
  "areaObservation": {
    "area": {
      "desc": null,
      "key": "E-45",
      "name": "Welcome Area"
    },
    "carrying": [],
    "items": [
      {
        "desc": null,
        "key": "E-46",
        "name": "Cool Rake"
      },
      {
        "desc": null,
        "key": "E-47",
        "name": "Boring Shovel"
      }
    ],
    "living": [
      {
        "desc": null,
        "key": "E-44",
        "name": "Living"
      }
    ],
    "person": {
      "desc": null,
      "key": "E-44",
      "name": "Living"
    },
    "routes": []
  }
}
