src/plugins/snapshots/burrow__plugins__looking__actions__tests__it_looks_in_area_with_items_on_ground_and_holding_items.snap
---
source: src/plugins/looking.rs
expression: reply.to_json()?
---
{
  "areaObservation": {
    "area": {
      "desc": "Not described.",
      "key": "E-4",
      "name": "Welcome Area"
    },
    "carrying": [
      {
        "desc": "Not described.",
        "key": "E-3",
        "name": "Cool Rake"
      }
    ],
    "items": [
      {
        "desc": "Not described.",
        "key": "E-5",
        "name": "Boring Shovel"
      },
      {
        "desc": "Not described.",
        "key": "E-6",
        "name": "East Exit"
      }
    ],
    "living": [
      {
        "desc": "Not described.",
        "key": "E-2",
        "name": "Living"
      }
    ],
    "person": {
      "desc": "Not described.",
      "key": "E-2",
      "name": "Living"
    },
    "routes": []
  }
}
