src/plugins/snapshots/burrow__plugins__looking__actions__tests__it_looks_in_empty_area.snap
---
source: src/plugins/looking.rs
expression: reply.to_json()?
---
{
  "areaObservation": {
    "area": {
      "desc": "Not described.",
      "key": "E-2",
      "name": "Welcome Area"
    },
    "carrying": [],
    "items": [],
    "living": [
      {
        "desc": "Not described.",
        "key": "E-1",
        "name": "Living"
      }
    ],
    "person": {
      "desc": "Not described.",
      "key": "E-1",
      "name": "Living"
    },
    "routes": []
  }
}
