src/plugins/snapshots/burrow__plugins__looking__actions__tests__it_looks_inside_containers.snap
---
source: src/plugins/looking.rs
expression: reply.to_json()?
---
{
  "insideObservation": {
    "items": [
      {
        "desc": "Not described.",
        "key": "E-1",
        "name": "Key"
      }
    ],
    "vessel": {
      "desc": "Not described.",
      "key": "E-0",
      "name": "Vessel"
    }
  }
}
